--- a/contenido.html
+++ b/contenido.html
@@ -16,19 +16,7 @@
   <div id="nav">
     <div class="top-bar" id="responsive-menu">
       <div class="top-bar-left">
-        <ul class="dropdown menu" data-dropdown-menu>
-          <li class="menu-text">Site Title</li>
-          <li class="has-submenu">
-            <a href="#0">One</a>
-            <ul class="submenu menu vertical" data-submenu>
-              <li><a href="#0">One</a></li>
-              <li><a href="#0">Two</a></li>
-              <li><a href="#0">Three</a></li>
-            </ul>
-          </li>
-          <li><a href="#0">Two</a></li>
-          <li><a href="#0">Three</a></li>
-        </ul>
+        Banco de Herramientas
       </div>
       <div class="top-bar-right">
         <ul class="menu">
@@ -41,6 +29,9 @@
 
   <div class="grid-y grid-padding-y" style="height: 100%" style="display: none">
     <div id="side" class="sidenav">
+      <div id="img-sidebar">
+          <img src="img/chec.png" alt="CHEC">
+      </div>
       <a href="inicio.html">
         <img class="sidebar" data-alt-src="img/5-verde.png" src="img/6.png" height="40" alt="Inicio">Inicio</a>
       <a href="#generalidades">
