--- a/criterios_conceptuales.html
+++ b/criterios_conceptuales.html
@@ -36,7 +36,7 @@
       <div id="img-sidebar">
         <img src="img/chec.png" alt="CHEC">
       </div>
-      <a href="inicio.html">
+      <a href="index.html">
         <img class="sidebar" data-alt-src="img/5-verde.png" src="img/1.png" height="40" alt="Inicio">Inicio</a>
       <a href="generalidades.html">
         <img class="sidebar" data-alt-src="img/5-verde.png" src="img/2.png" height="40" alt="Inicio">Generalidades</a>
@@ -65,6 +65,7 @@
                   impactos en la organización o se ven impactados por las diferentes decisiones, actividades, productos o
                   servicios que brinda como empresa prestadora del servicio público de energía.
                 </p>
+                <button id="criterios-button" class="hollow button" href="#">Ver PDF</button>
               </div>
             </li>
             <li class="accordion-item" data-accordion-item>
@@ -79,6 +80,7 @@
                   de pago, disfrute del servicio de energía y uso de canales vanguardistas relacionados con la prestación
                   del servicio de energía eléctrica.
                 </p>
+                <button id="criterios-button" class="hollow button" href="#">Ver PDF</button>
               </div>
             </li>
             <li class="accordion-item" data-accordion-item>
@@ -91,6 +93,7 @@
                   aportar al fortalecimiento de competencias ciudadanas con las cuales las personas lleven a la práctica
                   conocimientos que posibiliten el bienestar de todos los ciudadanos, clientes del servicio de energía eléctrica.
                 </p>
+                <button id="criterios-button" class="hollow button" href="#">Ver PDF</button>
               </div>
             </li>
             <li class="accordion-item" data-accordion-item>
@@ -102,6 +105,7 @@
                   de pago, disfrutando del servicio de energía y reconociendo su aporte a la calidad de vida de los clientes
                   y haciendo uso de los canales vanguardistas para interactuar con la empresa CHEC.
                 </p>
+                <button id="criterios-button" class="hollow button" href="#">Ver PDF</button>
               </div>
             </li>
             <li class="accordion-item" data-accordion-item>
@@ -114,6 +118,7 @@
                   de interés Clientes y Comunidad, se desarrolla la siguiente planeación estratégica, que da cuenta del aprendizaje
                   experiencial en las sesiones formativas.
                 </p>
+                <button id="criterios-button" class="hollow button" href="#">Ver PDF</button>
               </div>
             </li>
           </ul>
