--- a/generalidades.html
+++ b/generalidades.html
@@ -32,7 +32,7 @@
       <div id="img-sidebar">
         <img src="img/chec.png" alt="CHEC">
       </div>
-      <a href="inicio.html">
+      <a href="index.html">
         <img class="sidebar" data-alt-src="img/5-verde.png" src="img/1.png" height="40" alt="Inicio">Inicio</a>
       <a href="generalidades.html">
         <img class="sidebar" data-alt-src="img/5-verde.png" src="img/2.png" height="40" alt="Inicio">Generalidades</a>
