--- a/recursos.html
+++ b/recursos.html
@@ -113,7 +113,7 @@
                 </div>
               </div>
             </div>
-            <label>¿A qué modúlo desea subir el archivo?
+            <label>¿A qué módulo desea subir el archivo?
               <select>
               </select>
             </label>
