--- a/recursos.html
+++ b/recursos.html
@@ -73,6 +73,9 @@
             <li class="tabs-title">
               <a href="#manuales">Manuales</a>
             </li>
+            <li class="tabs-title">
+              <a href="#audios">Audios</a>
+            </li>
           </ul>
 
           <div class="tabs-content" data-tabs-content="collapsing-tabs">
@@ -93,6 +96,9 @@
             </div>
             <div class="tabs-panel" id="manuales">
               <p>Aún no se cargan documentos en el módulo de Manuales.</p>
+            </div>
+            <div class="tabs-panel" id="audios">
+              <p>Aún no se cargan documentos en el módulo de Audios.</p>
             </div>
           </div>
         </div>
