--- a/glosario.html
+++ b/glosario.html
@@ -18,16 +18,6 @@
       <div class="top-bar-left">
         Banco de Herramientas
       </div>
-      <div class="top-bar-right">
-        <ul class="menu">
-          <li>
-            <input type="search" placeholder="Search">
-          </li>
-          <li>
-            <button type="button" class="button">Search</button>
-          </li>
-        </ul>
-      </div>
     </div>
   </div>
 
@@ -54,7 +44,7 @@
     <div id="main_generalidades">
       <div id="content-glosario">
         <div id="glosario">
-          <ul class="tabs" data-deep-link="true" data-active-collapse="true" data-tabs id="collapsing-tabs">
+          <ul class="tabs" data-deep-link data-active-collapse="true" data-tabs id="collapsing-tabs">
             <li class="tabs-title is-active">
               <a href="#glosario" aria-selected="true">Glosario</a>
             </li>
