--- a/herramientas_didacticas.html
+++ b/herramientas_didacticas.html
@@ -18,16 +18,6 @@
       <div class="top-bar-left">
         Banco de Herramientas
       </div>
-      <div class="top-bar-right">
-        <ul class="menu">
-          <li>
-            <input type="search" placeholder="Search">
-          </li>
-          <li>
-            <button type="button" class="button">Search</button>
-          </li>
-        </ul>
-      </div>
     </div>
   </div>
 
@@ -52,7 +42,39 @@
 
     <!-- MAIN -->
     <div id="main_generalidades">
-      
+      <div id="main-herramientas" class="grid-y">
+        <div id="filtros-herramientas" class="cell small-3 medium-3 large-3">
+          <label>Seleccione la competencia
+            <select>
+              <option value="husker">Husker</option>
+              <option value="starbuck">Starbuck</option>
+              <option value="hotdog">Hot Dog</option>
+              <option value="apollo">Apollo</option>
+            </select>
+          </label>
+          <label>Seleccione el tema
+            <select>
+              <option value="husker">Husker</option>
+              <option value="starbuck">Starbuck</option>
+              <option value="hotdog">Hot Dog</option>
+              <option value="apollo">Apollo</option>
+            </select>
+          </label>
+          <label>Seleccione la zona del gestor
+            <select>
+              <option value="husker">Husker</option>
+              <option value="starbuck">Starbuck</option>
+              <option value="hotdog">Hot Dog</option>
+              <option value="apollo">Apollo</option>
+            </select>
+          </label>
+        </div>
+        <div id="ficheros-display" class="cell small-9 medium-9 large-9">
+          <div id="area-ficheros">
+
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
