--- a/recursos.html
+++ b/recursos.html
@@ -19,16 +19,6 @@
       <div class="top-bar-left">
         Banco de Herramientas
       </div>
-      <div class="top-bar-right">
-        <ul class="menu">
-          <li>
-            <input type="search" placeholder="Search">
-          </li>
-          <li>
-            <button type="button" class="button">Search</button>
-          </li>
-        </ul>
-      </div>
     </div>
   </div>
 
@@ -57,48 +47,42 @@
         <div class="tab-recursos">
           <ul class="tabs" data-deep-link data-active-collapse="true" data-tabs id="collapsing-tabs">
             <li class="tabs-title is-active">
-              <a href="#documentos" aria-selected="true">Documentos</a>
+              <a href="#1" aria-selected="true">Documentos</a>
             </li>
             <li class="tabs-title">
-              <a href="#videos">Vídeos</a>
+              <a href="#2">Vídeos</a>
             </li>
             <li class="tabs-title">
-              <a href="#imagenes">Imágenes</a>
+              <a href="#3">Imágenes</a>
             </li>
             <li class="tabs-title">
-              <a href="#presentaciones">Presentaciones</a>
+              <a href="#4">Presentaciones</a>
             </li>
             <li class="tabs-title">
-              <a href="#juego">Juego</a>
+              <a href="#5">Juego</a>
             </li>
             <li class="tabs-title">
-              <a href="#manuales">Manuales</a>
+              <a href="#6">Manuales</a>
             </li>
             <li class="tabs-title">
-              <a href="#audios">Audios</a>
+              <a href="#7">Audios</a>
             </li>
           </ul>
 
           <div class="tabs-content" data-tabs-content="collapsing-tabs">
-            <div class="tabs-panel is-active" id="documentos">
-              <p>Aún no se cargan documentos en el módulo de Documentos.</p>
+            <div class="tabs-panel is-active" id="1">
             </div>
-            <div class="tabs-panel" id="videos">
+            <div class="tabs-panel" id="2">
             </div>
-            <div class="tabs-panel" id="imagenes">
-              <p>Aún no se cargan documentos en el módulo de Imágenes.</p>
+            <div class="tabs-panel" id="3">
             </div>
-            <div class="tabs-panel" id="presentaciones">
-              <p>Aún no se cargan documentos en el módulo de Presentaciones.</p>
+            <div class="tabs-panel" id="4">
             </div>
-            <div class="tabs-panel" id="juego">
-              <p>Aún no se cargan documentos en el módulo de Juego.</p>
+            <div class="tabs-panel" id="5">
             </div>
-            <div class="tabs-panel" id="manuales">
-              <p>Aún no se cargan documentos en el módulo de Manuales.</p>
+            <div class="tabs-panel" id="6">
             </div>
-            <div class="tabs-panel" id="audios">
-              <p>Aún no se cargan documentos en el módulo de Audios.</p>
+            <div class="tabs-panel" id="7">
             </div>
           </div>
         </div>
@@ -142,7 +126,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="js/vendor/what-input.js"></script>
   <script src="js/vendor/foundation.js"></script>
-  <script src="js/contenido.js"></script>
+  <script src="js/recursos.js"></script>
 </body>
 
 </html>
