--- a/herramientas_didacticas.html
+++ b/herramientas_didacticas.html
@@ -45,27 +45,15 @@
       <div id="main-herramientas" class="grid-y">
         <div id="filtros-herramientas" class="cell small-3 medium-3 large-3">
           <label>Seleccione la competencia
-            <select>
-              <option value="husker">Husker</option>
-              <option value="starbuck">Starbuck</option>
-              <option value="hotdog">Hot Dog</option>
-              <option value="apollo">Apollo</option>
+            <select id="competencia">
             </select>
           </label>
           <label>Seleccione el tema
-            <select>
-              <option value="husker">Husker</option>
-              <option value="starbuck">Starbuck</option>
-              <option value="hotdog">Hot Dog</option>
-              <option value="apollo">Apollo</option>
+            <select id="tema">
             </select>
           </label>
           <label>Seleccione la zona del gestor
-            <select>
-              <option value="husker">Husker</option>
-              <option value="starbuck">Starbuck</option>
-              <option value="hotdog">Hot Dog</option>
-              <option value="apollo">Apollo</option>
+            <select id="zona">
             </select>
           </label>
         </div>
@@ -78,12 +66,12 @@
     </div>
   </div>
 
-
+  
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="js/vendor/what-input.js"></script>
   <script src="js/vendor/foundation.js"></script>
-  <script src="js/contenido.js"></script>
+  <script src="js/herramientas.js"></script>
 </body>
 
 </html>
